@@ -21,9 +21,10 @@ Hrotkó Gábor, and Alan Ezust for contributing to this release.
 {{{ Miscellaneous
 
 - Removed Saving and Backup option, "Never mark untitled buffers dirty"
-  because it has been replaced by "Autosave untitled buffers". (Alan Ezust)
+  because it has been replaced by "Autosave untitled buffers" which also
+  allows you to exit jEdit with dirty untitled buffers. (Alan Ezust)
 
-- FR#506: Autosaves are now saved to the Autosave/Backup directory. (Alan Ezust)
+- FR#506: Autosaves are now saved to the Backup directory. (Alan Ezust)
 
 }}}
 {{{ API Changes
